Integrate the app with Ethereum
Good news everyone! We're on the blockchain
